# shoppint_agent

./: .env.example  .gitignore  LLM_USAGE.md  README.md  bucket_generator.py  cart_automation.py  cart_examples.py  config.py  example_usage.py  history.py  main.py  pyproject.toml  query_examples.py  scraper.py  test_improved_scraper.py
prompts/: default_prompt.txt
